--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
   "private": true,
   "homepage": "https://bgirlalma.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.6",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.4.5",
+    "nanoid": "^5.0.1",
+    "notiflix": "^3.2.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
+    "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3"
+    "styled-components": "^6.0.8",
+    "web-vitals": "^2.1.3",
+    "yup": "^1.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
