--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
     "formik": "^2.4.5",
+    "modern-normalize": "^2.0.0",
     "nanoid": "^5.0.1",
     "notiflix": "^3.2.6",
     "react": "^18.1.0",
